--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "options-calculator",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "homepage": "https://AntekPraktykant.github.io/options-calculator",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0",
+	"path": "^0.12.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -27,7 +32,9 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.2.0",
     "globals": "^15.14.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.5"
